--- a/SmartLibrary/Views/Pages/BookManage.xaml
+++ b/SmartLibrary/Views/Pages/BookManage.xaml
@@ -1,13 +1,13 @@
 ﻿<Page
-    x:Class="SmartLibrary.Views.Pages.BookInfo"
+    x:Class="SmartLibrary.Views.Pages.BookManage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:SmartLibrary.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="BookInfo"
-    d:DataContext="{d:DesignInstance local:BookInfo,
+    Title="BookManage"
+    d:DataContext="{d:DesignInstance local:BookManage,
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -16,5 +16,7 @@
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     mc:Ignorable="d">
 
-    <Grid />
+    <Grid Margin="16">
+        <ui:TextBlock Text="管理" />
+    </Grid>
 </Page>
