--- a/SmartLibrary/Views/Pages/Borrow_Return_Book.xaml
+++ b/SmartLibrary/Views/Pages/Borrow_Return_Book.xaml
@@ -7,6 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="Borrow_Return_Book"
+    d:DataContext="{d:DesignInstance local:Borrow_Return_Book,
+                                     IsDesignTimeCreatable=False}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
