初步完善管理图书界面

--- a/SmartLibrary/Views/MainWindow.xaml
+++ b/SmartLibrary/Views/MainWindow.xaml
@@ -38,7 +38,7 @@
                     Source="pack://application:,,,/Assets/applicationIcon-512.png" />
             </ui:TitleBar.Icon>
         </ui:TitleBar>
-
+        <ContentPresenter x:Name="RootContentDialog" Grid.Row="0" />
         <ui:NavigationView
             x:Name="RootNavigation"
             Grid.Row="1"
