--- a/SmartLibrary/App.xaml
+++ b/SmartLibrary/App.xaml
@@ -2,6 +2,7 @@
     x:Class="SmartLibrary.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:SmartLibrary.Converters"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     DispatcherUnhandledException="OnDispatcherUnhandledException"
     Exit="OnExit"
@@ -12,7 +13,10 @@
                 <ui:ThemesDictionary Theme="Dark" />
                 <ui:ControlsDictionary />
                 <ResourceDictionary Source="pack://application:,,,/Resources/MyButton.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Resources/MyToggleButton.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Resources/MyDataGrid.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <converters:StringToImageSourceConverter x:Key="StringToImageSourceConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
