--- a/SmartLibrary/Views/Pages/BookManage.xaml
+++ b/SmartLibrary/Views/Pages/BookManage.xaml
@@ -9,14 +9,259 @@
     Title="BookManage"
     d:DataContext="{d:DesignInstance local:BookManage,
                                      IsDesignTimeCreatable=False}"
-    d:DesignHeight="450"
+    d:DesignHeight="520"
     d:DesignWidth="800"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <Style BasedOn="{StaticResource MyButtonStyle}" TargetType="ui:Button" />
+        <Style BasedOn="{StaticResource MyToggleButtonStyle}" TargetType="ToggleButton" />
+        <Style BasedOn="{StaticResource MyDataGridStyle}" TargetType="ui:DataGrid" />
+        <Style x:Key="EditButton" TargetType="ui:Button">
+            <Setter Property="Background" Value="{x:Null}" />
+            <Setter Property="BorderBrush" Value="{x:Null}" />
+            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
+            <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border
+                            Padding="5"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="1"
+                            CornerRadius="5">
+                            <ui:SymbolIcon Symbol="Edit24" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#673AB7" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style
+            x:Key="RemoveButton"
+            BasedOn="{StaticResource EditButton}"
+            TargetType="ui:Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border
+                            Padding="5"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="1"
+                            CornerRadius="5">
+                            <ui:SymbolIcon Symbol="Delete24" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#F44336" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Page.Resources>
+
     <Grid Margin="16">
-        <ui:TextBlock Text="管理" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:AutoSuggestBox Grid.Row="0" PlaceholderText="快速查找" />
+        <Grid Grid.Row="1" Margin="0,12,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Border
+                Name="RootGrid"
+                Grid.Column="0"
+                Background="{ui:ThemeResource ControlFillColorDefaultBrush}"
+                CornerRadius="8">
+                <ui:DataGrid
+                    Height="{Binding ElementName=RootGrid, Path=Height, Mode=OneWay}"
+                    d:ItemsSource="{d:SampleData ItemCount=8}"
+                    AutoGenerateColumns="False"
+                    CanUserAddRows="False"
+                    ItemsSource="{Binding ViewModel.DataGridItems, Mode=OneWay}"
+                    RowHeaderWidth="0">
+                    <DataGrid.Columns>
+                        <DataGridCheckBoxColumn Width="40" CanUserResize="False">
+                            <DataGridCheckBoxColumn.HeaderTemplate>
+                                <DataTemplate>
+                                    <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                </DataTemplate>
+                            </DataGridCheckBoxColumn.HeaderTemplate>
+                        </DataGridCheckBoxColumn>
+                        <DataGridTemplateColumn
+                            Width="130"
+                            CanUserResize="False"
+                            Header="ISBN">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Text="{Binding isbn}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn
+                            Width="2*"
+                            CanUserResize="False"
+                            Header="书名">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock
+                                        Margin="4,0,4,0"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        Text="{Binding bookName}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn
+                            Width="*"
+                            CanUserResize="False"
+                            Header="作者">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock
+                                        Margin="4,0,4,0"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Text="{Binding author}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn
+                            Width="60"
+                            CanUserResize="False"
+                            Header="书架号">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Text="{Binding shelfNumber}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridCheckBoxColumn
+                            Width="70"
+                            Binding="{Binding isBorrowed}"
+                            CanUserResize="False"
+                            Header="是否借出" />
+                        <DataGridTemplateColumn
+                            Width="Auto"
+                            CanUserResize="False"
+                            Header="操作">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <ui:Button
+                                            Margin="2,0,0,0"
+                                            Style="{StaticResource EditButton}"
+                                            ToolTip="编辑图书信息" />
+                                        <ui:Button
+                                            Margin="2,0,2,0"
+                                            Style="{StaticResource RemoveButton}"
+                                            ToolTip="删除图书" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </ui:DataGrid>
+            </Border>
+            <Grid Grid.Column="1" Margin="12,0,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0">
+                    <Grid Margin="8,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <ui:Image
+                            Grid.Column="0"
+                            Width="32"
+                            Height="32"
+                            RenderOptions.BitmapScalingMode="HighQuality"
+                            Source="{Binding ViewModel.NetworkStateImageSource, Converter={StaticResource StringToImageSourceConverter}, Mode=OneWay}" />
+                        <ui:TextBlock
+                            Grid.Column="1"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            FontSize="24"
+                            Text="网络数据库" />
+                    </Grid>
+                    <Grid Margin="8,6,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <ui:Image
+                            Grid.Column="0"
+                            Width="32"
+                            Height="32"
+                            RenderOptions.BitmapScalingMode="HighQuality"
+                            Source="{Binding ViewModel.DatabaseStateImageSource, Converter={StaticResource StringToImageSourceConverter}, Mode=OneWay}" />
+                        <ui:TextBlock
+                            Grid.Column="1"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            FontSize="24"
+                            Text="本地数据库" />
+                    </Grid>
+                </StackPanel>
+                <StackPanel Grid.Row="2">
+                    <ui:Button
+                        MinWidth="190"
+                        MinHeight="45"
+                        Command="{Binding ViewModel.ButtonClickCommand, Mode=OneWay}"
+                        CommandParameter="Import"
+                        Content="导入数据库"
+                        FontSize="24" />
+                    <ui:Button
+                        MinWidth="190"
+                        MinHeight="45"
+                        Margin="0,10,0,0"
+                        Command="{Binding ViewModel.ButtonClickCommand, Mode=OneWay}"
+                        CommandParameter="Export"
+                        Content="导出数据库"
+                        FontSize="24" />
+                    <ui:Button
+                        MinWidth="190"
+                        MinHeight="45"
+                        Margin="0,10,0,0"
+                        Command="{Binding ViewModel.ButtonClickCommand, Mode=OneWay}"
+                        CommandParameter="AddBook"
+                        Content="添加图书"
+                        FontSize="24" />
+                    <ui:Button
+                        MinWidth="190"
+                        MinHeight="45"
+                        Margin="0,10,0,0"
+                        Command="{Binding ViewModel.ButtonClickCommand, Mode=OneWay}"
+                        CommandParameter="DelBook"
+                        Content="删除图书"
+                        FontSize="24" />
+                </StackPanel>
+            </Grid>
+        </Grid>
     </Grid>
 </Page>
