--- a/SmartLibrary/Views/Pages/Settings.xaml
+++ b/SmartLibrary/Views/Pages/Settings.xaml
@@ -2,8 +2,8 @@
     x:Class="SmartLibrary.Views.Pages.Settings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:SmartLibrary.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:helpers="clr-namespace:SmartLibrary.Helpers"
     xmlns:local="clr-namespace:SmartLibrary.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
@@ -18,7 +18,7 @@
     mc:Ignorable="d">
 
     <Page.Resources>
-        <helpers:ThemeToIndexConverter x:Key="ThemeToIndexConverter" />
+        <converters:ThemeToIndexConverter x:Key="ThemeToIndexConverter" />
     </Page.Resources>
 
     <StackPanel Margin="16">
